--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 		<div>
 			A Todo List
-			<ul id="todo"></ul>
-			<form onsubmit="app.controllers.todoController.addTodoFromForm(event)"></form>
-			<input type="text" name="description">
-			<button type="submit">Add</button>
-
+			<ul class="text" id="todo"></ul>
+			<form onsubmit="app.controllers.todoController.addTodoFromForm(event)">
+				<input type="text" name="description">
+				<button type="submit">Add</button>
+			</form>
 		</div>
 	</div>
 
