--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <body id="body">
 	<div class="container-fluid background" id='dude'>
 		<div class="row">
-			<div class="col d-flex justify-content-end text" id="weather"></div>
+			<div class="col-10"></div>
+			<div class="col-2 d-flex justify-content-end text white" id="weather"></div>
 		</div>
 		<div class="row">
-			<div class="col text d-flex justify-content-center" id="quote"></div>
+			<div class="col-3"></div>
+			<div class="col-6 text d-flex justify-content-center white" id="quote"></div>
+			<div class="col-3"></div>
 		</div>
 		<div class="row fixed-bottom">
 			<div class="col d-flex justify-content-end">
-				<ul class="text" id="todo"></ul>
+				<ul class="text white" id="todo"></ul>
 				<form onsubmit="app.controllers.todoController.addTodoFromForm(event)">
 					<input type="text" name="description">
 					<button type="submit">Add</button>
